# Stardust-

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  output.css
src-tauri/: .env  Cargo.toml  Stardust.sqlite  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/postgres/: 20260402214720_create__tables.sql
src-tauri/migrations/sqlite/: 20260402214650_create__tables.sql  20260402220849_views__triggers.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: auth.rs  etablissement.rs  licence.rs  mod.rs  offre.rs  paiement.rs  webhook.rs
src-tauri/src/commands/: abonnement.rs  etablissement.rs  licence.rs  mod.rs  offre.rs  paiement.rs
src-tauri/src/crypto/: ed25519.rs  mod.rs
src-tauri/src/database/: connection.rs  mod.rs
src-tauri/src/database/local/: mod.rs
src-tauri/src/database/local/repositories/: abonnement.rs  etablissement.rs  licence.rs  mod.rs  offre.rs
src-tauri/src/database/remote/: mod.rs
src-tauri/src/database/remote/repositories/: abonnement.rs  etablissement.rs  licence.rs  mod.rs  offre.rs
src-tauri/src/models/: abonnement.rs  etablissement.rs  licence.rs  mod.rs  offre.rs  paiement.rs
src-tauri/src/payment/: mod.rs  processor.rs  service.rs  sync.rs
src-tauri/src/payment/airtel/: client.rs  config.rs  mod.rs  models.rs
src-tauri/src/payment/mtn/: client.rs  config.rs  mod.rs  models.rs
src-tauri/src/services/: licence_service.rs  mod.rs
src-tauri/src/services/abonnement/: mod.rs  scheduler.rs  service.rs
src-tauri/src/services/offre/: mod.rs  service.rs
src-tauri/src/sync/: engine.rs  mod.rs  service.rs
src-tauri/src/utils/: error.rs  logger.rs  mod.rs
src/components/: Abonnement.tsx  Admin.tsx  Applications.tsx  Avis.tsx  CleActvation.tsx  ClesApi.tsx  Clients.tsx  Dashboard.tsx  EtablissementForm.tsx  Etablissements.tsx  FinanceSection.tsx  Offres.tsx  Parametres.tsx  ProfilModal.tsx  Toast.tsx  splashscreen.tsx
src/components/ApplicationsModule/: Applications.tsx  EliteApp.tsx  ExamLabApp.tsx  ParentApp.tsx  Scolarys.tsx  TeacherApp.tsx
src/interfaces/: Accueil.tsx  Connexion.tsx
