[package]
name = "nova"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
serde_with = "3.0"
tauri = { version = "2.8.4", features = [] }
tauri-plugin-log = "2"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-opener = "2.0.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "postgres", "runtime-tokio-rustls", "macros"] }
dotenv = "0.15"
validator = { version = "0.16", features = ["derive"] } 
image = "0.25"
base64 = "0.21"
webp = "0.2"
rgb = "0.8"
aes-gcm = "0.10"
chacha20 = "0.9"
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
rsa = "0.9"
ring = "0.17"
